--- a/Localization/Global/GlobalResources.de.resx
+++ b/Localization/Global/GlobalResources.de.resx
@@ -121,10 +121,10 @@
         <value>Kontostatus war {0}, geändert in {1}. </value>
     </data>
     <data name="ACS_APPLIED_LIST_UPDATED" xml:space="preserve">
-        <value>[DE]Applied Account Config Sets with IDs: {0} are not eligible for the account any more. Related subscriptions will be terminated.</value>
+        <value>[DE]Applied OnBoard Templates with IDs: {0} are not eligible for the account any more. Related subscriptions will be terminated.</value>
     </data>
     <data name="ACS_APPLIED_WAS_REMOVED" xml:space="preserve">
-        <value>[DE]Account Config Sets with IDs {0} were removed from Applied list.</value>
+        <value>[DE]OnBoard Templates with IDs {0} were removed from Applied list.</value>
     </data>
     <data name="ACS_CREATE_SUB_FINISH" xml:space="preserve">
         <value>[DE]Creation of new subscriptions is finished.</value>
@@ -133,10 +133,10 @@
         <value>[DE]Starting creation of new subscriptions...</value>
     </data>
     <data name="ACS_ELIGIBLE_APPLIED_INTERSECTION" xml:space="preserve">
-        <value>[DE]Account Config Sets with IDs: {0} will be skipped. They are currently eligible for the account and were already applied.</value>
+        <value>[DE]OnBoard Templates with IDs: {0} will be skipped. They are currently eligible for the account and were already applied.</value>
     </data>
     <data name="ACS_ELIGIBLE_LIST_UPDATED" xml:space="preserve">
-        <value>[DE]New subscriptions will be created for Eligible Account Config Sets with IDs: {0}.</value>
+        <value>[DE]New subscriptions will be created for Eligible OnBoard Templates with IDs: {0}.</value>
     </data>
     <data name="ACS_EXCHANGE_RANKS_EXCEPTION" xml:space="preserve">
         <value>[DE]Error on exchanging ranks of Account Configuration Sets with Id {0} and {1}</value>
@@ -181,19 +181,19 @@
         <value>[DE]Loading Account with ID {0}...</value>
     </data>
     <data name="ACS_LOAD_APPLIED_ACS_FINISH" xml:space="preserve">
-        <value>[DE]Applied Account Config Sets with IDs: {0} were found for the account.</value>
+        <value>[DE]Applied OnBoard Templates with IDs: {0} were found for the account.</value>
     </data>
     <data name="ACS_LOAD_APPLIED_ACS_START" xml:space="preserve">
-        <value>[DE]Loading Account Config Sets that were applied for the account...</value>
+        <value>[DE]Loading OnBoard Templates that were applied for the account...</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_FINISH" xml:space="preserve">
-        <value>[DE]Account Config Sets with IDs: {0} were found as eligible for the account.</value>
+        <value>[DE]OnBoard Templates with IDs: {0} were found as eligible for the account.</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_NONUNIQUE_RANK_EXCEPTION" xml:space="preserve">
-        <value>[DE]Some Eligible Account Config Sets have non-unique rank. Wrong Account Config Sets configuration.</value>
+        <value>[DE]Some Eligible OnBoard Templates have non-unique rank. Wrong OnBoard Templates configuration.</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_START" xml:space="preserve">
-        <value>[DE]Loading Account Config Sets that are eligible for the account...</value>
+        <value>[DE]Loading OnBoard Templates that are eligible for the account...</value>
     </data>
     <data name="ACS_MODIFY_ACC_PROP_FINISH" xml:space="preserve">
         <value>[DE]Modification of account properties is finished.</value>
@@ -202,10 +202,10 @@
         <value>[DE]Starting account properties modification...</value>
     </data>
     <data name="ACS_PROP_MODIFICATION_FAILED" xml:space="preserve">
-        <value>[DE]Fail to modify property '{0}' by ACS {1}. Old value:'{2}'. New value:'{3}'.</value>
+        <value>[DE]Fail to modify property '{0}' by OnBoard Template {1}. Old value:'{2}'. New value:'{3}'.</value>
     </data>
     <data name="ACS_PROP_MODIFIED_SUCCESSFULLY" xml:space="preserve">
-        <value>[DE]Property '{0}' was modified by ACS {1}. Old value:'{2}'. New value:'{3}'.</value>
+        <value>[DE]Property '{0}' was modified by OnBoard Template {1}. Old value:'{2}'. New value:'{3}'.</value>
     </data>
     <data name="ACS_PROP_WAS_NOT_FOUND" xml:space="preserve">
         <value>[DE]Property '{0}' was not found.</value>
@@ -238,10 +238,10 @@
         <value>[DE]The Account Configuration Set date does not match available '{0}' Product Offering date. Effective date for Configuration Set from '{1} to '{2}', but for Product offering from '{3}' to '{4}'  </value>
     </data>
     <data name="ACS_VALIDATION_ConfigSetEndDateLessThanCurrentSystemTime" xml:space="preserve">
-        <value>[DE]Incorrect available End date for the current Account Config Set. Available EffectiveEndDate={0} less than system date={1}, so the Account Config Set will never use.</value>
+        <value>[DE]Incorrect available End date for the current OnBoard Template. Available EffectiveEndDate={0} less than system date={1}, so the Account Config Set will never use.</value>
     </data>
     <data name="ACS_VALIDATION_ConfiSetStartDateGreaterThanEndDate" xml:space="preserve">
-        <value>[DE]Incorrect available date for the current Account Config Set. Available EffectiveDate={0} greater then EffectiveEndDate={1}.</value>
+        <value>[DE]Incorrect available date for the current OnBoard Template. Available EffectiveDate={0} greater then EffectiveEndDate={1}.</value>
     </data>
     <data name="ACS_VALIDATION_CurrentAccIsPartitionUnableToSubscribePoFromOtherPartition" xml:space="preserve">
         <value>[DE]'{0}' Product Offering is not available for the '{1}' Partition account with id='{2}'. The IdPartition='{3}' of Product Offering is different to IdPartition='{4}' of Partition account.</value>
@@ -316,7 +316,7 @@
         <value>[DE]Fail to modify views of Account ID {0}.</value>
     </data>
     <data name="ADD_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
-        <value>[DE]Error on saving AccountConfigSet with Id {0}</value>
+        <value>[DE]Error on saving OnBoard Template with Id {0}</value>
     </data>
     <data name="ADD_ACCOUNTCONFIGSET_SUBSCRIPTIONPARAMS_EXCEPTION" xml:space="preserve">
         <value>[DE]Error on saving SubscriptionParams with Id {0}</value>
@@ -439,7 +439,7 @@
         <value>[DE]Error get account configuration set applied list</value>
     </data>
     <data name="GET_OTHER_PARTITION_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
-        <value>[DE] Can't get account config set with PO from another partition!</value>
+        <value>[DE] Can't get OnBoard Template with PO from another partition!</value>
     </data>
     <data name="GOT_NO_RESPONSE" xml:space="preserve">
         <value>[DE]Got no response from {0}.</value>
