--- a/Localization/Global/GlobalResources.pt-br.resx
+++ b/Localization/Global/GlobalResources.pt-br.resx
@@ -121,10 +121,10 @@
         <value>O estado da conta era {0}, foi alterado para {1}. </value>
     </data>
     <data name="ACS_APPLIED_LIST_UPDATED" xml:space="preserve">
-        <value>[pt-br]Applied Account Config Sets with IDs: {0} are not eligible for the account any more. Related subscriptions will be terminated.</value>
+        <value>[pt-br]Applied OnBoard Templates with IDs: {0} are not eligible for the account any more. Related subscriptions will be terminated.</value>
     </data>
     <data name="ACS_APPLIED_WAS_REMOVED" xml:space="preserve">
-        <value>[pt-br]Account Config Sets with IDs {0} were removed from Applied list.</value>
+        <value>[pt-br]OnBoard Templates with IDs {0} were removed from Applied list.</value>
     </data>
     <data name="ACS_CREATE_SUB_FINISH" xml:space="preserve">
         <value>[pt-br]Creation of new subscriptions is finished.</value>
@@ -133,10 +133,10 @@
         <value>[pt-br]Starting creation of new subscriptions...</value>
     </data>
     <data name="ACS_ELIGIBLE_APPLIED_INTERSECTION" xml:space="preserve">
-        <value>[pt-br]Account Config Sets with IDs: {0} will be skipped. They are currently eligible for the account and were already applied.</value>
+        <value>[pt-br]OnBoard Templates with IDs: {0} will be skipped. They are currently eligible for the account and were already applied.</value>
     </data>
     <data name="ACS_ELIGIBLE_LIST_UPDATED" xml:space="preserve">
-        <value>[pt-br]New subscriptions will be created for Eligible Account Config Sets with IDs: {0}.</value>
+        <value>[pt-br]New subscriptions will be created for Eligible OnBoard Templates with IDs: {0}.</value>
     </data>
     <data name="ACS_EXCHANGE_RANKS_EXCEPTION" xml:space="preserve">
         <value>[PT-BR]Error on exchanging ranks of Account Configuration Sets with Id {0} and {1}</value>
@@ -181,19 +181,19 @@
         <value>[pt-br]Loading Account with ID {0}...</value>
     </data>
     <data name="ACS_LOAD_APPLIED_ACS_FINISH" xml:space="preserve">
-        <value>[pt-br]Applied Account Config Sets with IDs: {0} were found for the account.</value>
+        <value>[pt-br]Applied OnBoard Templates with IDs: {0} were found for the account.</value>
     </data>
     <data name="ACS_LOAD_APPLIED_ACS_START" xml:space="preserve">
-        <value>[pt-br]Loading Account Config Sets that were applied for the account...</value>
+        <value>[pt-br]Loading OnBoard Templates that were applied for the account...</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_FINISH" xml:space="preserve">
-        <value>[pt-br]Account Config Sets with IDs: {0} were found as eligible for the account.</value>
+        <value>[pt-br]OnBoard Templates with IDs: {0} were found as eligible for the account.</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_NONUNIQUE_RANK_EXCEPTION" xml:space="preserve">
-        <value>[pt-br]Some Eligible Account Config Sets have non-unique rank. Wrong Account Config Sets configuration.</value>
+        <value>[pt-br]Some Eligible OnBoard Templates have non-unique rank. Wrong OnBoard Templates configuration.</value>
     </data>
     <data name="ACS_LOAD_ELIGIBLE_ACS_START" xml:space="preserve">
-        <value>[pt-br]Loading Account Config Sets that are eligible for the account...</value>
+        <value>[pt-br]Loading OnBoard Templates that are eligible for the account...</value>
     </data>
     <data name="ACS_MODIFY_ACC_PROP_FINISH" xml:space="preserve">
         <value>[pt-br]Modification of account properties is finished.</value>
@@ -202,10 +202,10 @@
         <value>[pt-br]Starting account properties modification...</value>
     </data>
     <data name="ACS_PROP_MODIFICATION_FAILED" xml:space="preserve">
-        <value>[pt-br]Fail to modify property '{0}' by ACS {1}. Old value:'{2}'. New value:'{3}'.</value>
+        <value>[pt-br]Fail to modify property '{0}' by OnBoard Template {1}. Old value:'{2}'. New value:'{3}'.</value>
     </data>
     <data name="ACS_PROP_MODIFIED_SUCCESSFULLY" xml:space="preserve">
-        <value>[pt-br]Property '{0}' was modified by ACS {1}. Old value:'{2}'. New value:'{3}'.</value>
+        <value>[pt-br]Property '{0}' was modified by OnBoard Template {1}. Old value:'{2}'. New value:'{3}'.</value>
     </data>
     <data name="ACS_PROP_WAS_NOT_FOUND" xml:space="preserve">
         <value>[pt-br]Property '{0}' was not found.</value>
@@ -238,10 +238,10 @@
         <value>[pt-br]The Account Configuration Set date does not match available '{0}' Product Offering date. Effective date for Configuration Set from '{1} to '{2}', but for Product offering from '{3}' to '{4}'  </value>
     </data>
     <data name="ACS_VALIDATION_ConfigSetEndDateLessThanCurrentSystemTime" xml:space="preserve">
-        <value>[pt-br]Incorrect available End date for the current Account Config Set. Available EffectiveEndDate={0} less than system date={1}, so the Account Config Set will never use.</value>
+        <value>[pt-br]Incorrect available End date for the current OnBoard Template. Available EffectiveEndDate={0} less than system date={1}, so the Account Config Set will never use.</value>
     </data>
     <data name="ACS_VALIDATION_ConfiSetStartDateGreaterThanEndDate" xml:space="preserve">
-        <value>[pt-br]Incorrect available date for the current Account Config Set. Available EffectiveDate={0} greater then EffectiveEndDate={1}.</value>
+        <value>[pt-br]Incorrect available date for the current OnBoard Template. Available EffectiveDate={0} greater then EffectiveEndDate={1}.</value>
     </data>
     <data name="ACS_VALIDATION_CurrentAccIsPartitionUnableToSubscribePoFromOtherPartition" xml:space="preserve">
         <value>[pt-br]'{0}' Product Offering is not available for the '{1}' Partition account with id='{2}'. The IdPartition='{3}' of Product Offering is different to IdPartition='{4}' of Partition account.</value>
@@ -316,7 +316,7 @@
         <value>[pt-br]Fail to modify views of Account ID {0}.</value>
     </data>
     <data name="ADD_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
-        <value>[pt-br]Error on saving AccountConfigSet with Id {0}</value>
+        <value>[pt-br]Error on saving OnBoard Template with Id {0}</value>
     </data>
     <data name="ADD_ACCOUNTCONFIGSET_SUBSCRIPTIONPARAMS_EXCEPTION" xml:space="preserve">
         <value>[pt-br]Error on saving SubscriptionParams with Id {0}</value>
@@ -439,7 +439,7 @@
         <value>[pt-br]Error get account configuration set applied list</value>
     </data>
     <data name="GET_OTHER_PARTITION_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
-        <value>[pt-br] Can't get account config set with PO from another partition!</value>
+        <value>[pt-br] Can't get OnBoard Template with PO from another partition!</value>
     </data>
     <data name="GOT_NO_RESPONSE" xml:space="preserve">
         <value>Sem resposta de {0}.</value>
