--- a/config/localization/MetraTech.MetraNet.Reporting/MetraTech.MetraNet.reporting_us.xml
+++ b/config/localization/MetraTech.MetraNet.Reporting/MetraTech.MetraNet.reporting_us.xml
@@ -1,11 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
     <language_code>us</language_code>
-    <locale_space name="MetraTech.MetraNet.Reporting"> 
-        <locale_entry>
-            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
-            <Value>View Data from Analytics Datamart</Value>
-        </locale_entry>
+    <locale_space name="MetraTech.MetraNet.Reporting">
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Accounting</Name>
             <Value>Accounting</Value>
@@ -13,6 +9,10 @@
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Basic</Name>
             <Value>Basic</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/ReportType/BillingGroupStatistics</Name>
+            <Value>Billing Group Statistics</Value>
         </locale_entry>
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Configured</Name>
@@ -25,6 +25,10 @@
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/IntervalStatistics</Name>
             <Value>Interval Statistics</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
+            <Value>View Data from Analytics Datamart</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
