--- a/config/localization/MetraTech.MetraNet.Reporting/metratech.metranet.reporting_fr.xml
+++ b/config/localization/MetraTech.MetraNet.Reporting/metratech.metranet.reporting_fr.xml
@@ -3,16 +3,16 @@
     <language_code>fr</language_code>
     <locale_space name="MetraTech.MetraNet.Reporting">
         <locale_entry>
-            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
-            <Value>View Data from Analytics Datamart</Value>
-        </locale_entry>
-        <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Accounting</Name>
             <Value>DE Accounting</Value>
         </locale_entry>
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Basic</Name>
             <Value>De base</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/ReportType/BillingGroupStatistics</Name>
+            <Value>Facturation Statistiques Groupe</Value>
         </locale_entry>
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Configured</Name>
@@ -25,6 +25,10 @@
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/IntervalStatistics</Name>
             <Value>Statistiques d'intervalle</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
+            <Value>View Data from Analytics Datamart</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
