--- a/config/localization/MetraTech.MetraNet.Reporting/metratech.metranet.reporting_jp.xml
+++ b/config/localization/MetraTech.MetraNet.Reporting/metratech.metranet.reporting_jp.xml
@@ -3,16 +3,16 @@
     <language_code>jp</language_code>
     <locale_space name="MetraTech.MetraNet.Reporting">
         <locale_entry>
-            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
-            <Value>[JA]View Data from Analytics Datamart</Value>
-        </locale_entry>
-        <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Accounting</Name>
             <Value>[JA]Accounting</Value>
         </locale_entry>
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Basic</Name>
             <Value>[JA]Basic</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/ReportType/BillingGroupStatistics</Name>
+            <Value>[JA]Billing Group Statistics</Value>
         </locale_entry>
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/Configured</Name>
@@ -25,6 +25,10 @@
         <locale_entry>
             <Name>MetraTech.MetraNet.Reporting/ReportType/IntervalStatistics</Name>
             <Value>[JA]Interval Statistics</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>MetraTech.MetraNet.Reporting/SystemReportCapabilities/View Data from Analytics Datamart</Name>
+            <Value>[JA]View Data from Analytics Datamart</Value>
         </locale_entry>
     </locale_space>
 </mt_config>
